--- a/src/app/lisaprodotti/lisaprodotti.component.html
+++ b/src/app/lisaprodotti/lisaprodotti.component.html
@@ -1,4 +1,8 @@
 <div class="container">
+  <div class="alert" [class]="messaggio.type" *ngIf="!!messaggio">
+    {{messaggio.msg}}
+ </div> 
+
 <div>
 
     <div class="row">
@@ -15,17 +19,19 @@
                 <th scope="col">Azione</th>
               </tr>
             </thead>
-            <tbody>
-              <tr *ngFor="let prodotto of listaProdotti">
-                <th scope="row">1</th>
+            <tbody *ngIf="categorie">
+              <tr *ngFor="let prodotto of listaProdotti; index as i">
+                <th scope="row">{{i+1}}</th>
                 <td>{{prodotto.nome}}</td>
                 <td>{{prodotto.descrizione}}</td>
                 <td>{{prodotto.prezzo}}</td>
                 <td>{{prodotto.src | slice:1:15}}</td>
-                <td>{{prodotto.categoria}}</td>
+                <td>{{getCategoria(prodotto.id_categoria)}}</td>
                 <td>
-                <button type="button" class="btn btn-success"><i class="fas fa-edit"></i></button>
-                <button type="button" class="btn btn-danger"><i class="bi bi-trash"></i></button>
+                <button type="button" class="btn btn-success"><i class="bi bi-pencil-square"></i></button>
+                <button type="button" (click)="delete(prodotto.id)" class="btn btn-danger"><i class="bi bi-trash"></i></button>
+
+               
                 
                 </td>
               </tr>
@@ -34,6 +40,8 @@
           </table>
         </div>
       </div>
+
+      
 
 </div>
 </div>
