--- a/src/app/homeadmin/homeadmin.component.html
+++ b/src/app/homeadmin/homeadmin.component.html
@@ -7,7 +7,7 @@
             <img class="card-img-top" src="https://www.shopdwfreshmarket.com/sites/default/files/Fresh_NewItems_Sign.png" alt="Card image cap">
             
             <div class="card-body text-center">
-                <a href="#" class="btn btn-warning">Aggiungi prodotto</a>
+                <a href="/nuovoprodotto/admin" class="btn btn-warning">Aggiungi prodotto</a>
             </div>
         </div>
     </div>
